tried applying initial positioning for cards, having wrap issues

--- a/style.css
+++ b/style.css
@@ -40,14 +40,36 @@ a {
     flex-grow: 1;
 }
 
+
 .info-pane {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 }
 
 .cards {
     display: flex;
-    gap: 5%;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+}
+
+.card-text {
+    text-align: center;
+    max-width: 150px;
+    text-wrap: wrap;
+}
+
+.card-image {
+    width: 150px;
+    height: 150px;
+    border: 4px solid #3882F6;
+    border-radius: 15px;
 }
